Correcciones de ChangeLog.java
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 40 minutes

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -99,4 +99,7 @@
     <string name="change_logs">Historial de versiones</string>
     <string name="ultima_badge">Última</string>
     <string name="boton_flotante_twitter">Botón flotante twitter</string>
+    <string name="TEST_TEXT">Desplazarse hacia arriba</string>
+    <string name="TEST_MAS_OPCIONES">Más opciones</string>
+    <string name="TEST_TOOLBAR">Título toolbar</string>
 </resources>
