--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -99,4 +99,7 @@
     <string name="change_logs">Version history</string>
     <string name="ultima_badge">Lastest</string>
     <string name="boton_flotante_twitter">Floating button Twitter</string>
+    <string name="TEST_TEXT">Navigate up</string>
+    <string name="TEST_MAS_OPCIONES">More options</string>
+    <string name="TEST_TOOLBAR">Toolbar title</string>
 </resources>
