Actualizacion del SQK de cloud messages para android
Signed-off-by: Felipe Gonzalez Alarcon <Felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 36 minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,11 @@
 
     <string name="ADMOB_MASTER_KEY" translatable="false">ca-app-pub-6355378855577476~7414287525</string>
     <!-- PROD AD-->
-    <string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-6355378855577476/9207230747</string>
-    <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-6355378855577476/7649578822</string>
+    <!--<string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-6355378855577476/9207230747</string>
+    <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-6355378855577476/7649578822</string>-->
     <!--TEST AD-->
-    <!--<string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
-    <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-3940256099942544/5224354917</string>-->
+    <string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
 
     <!-- LAST CHANGE LOG -->
     <string name="LAST_CHANGE_LOG" translatable="false"></string>
@@ -286,4 +286,11 @@
     <string name="TEST_TEXT">Desplazarse hacia arriba</string>
     <string name="TEST_MAS_OPCIONES">Más opciones</string>
     <string name="TEST_TOOLBAR">Título toolbar</string>
+
+    <string name="TAG_HORA_AHORA" translatable="false">HORA_AHORA:</string>
+    <string name="TAG_HORA_REWARD" translatable="false">"HORA_REWARD: "</string>
+    <string name="TAG_REWARD_STATUS" translatable="false">REWARD_STATUS: </string>
+    <string name="TAG_VIDEO_REWARD_STATUS_CLOSED" translatable="false">CLOSED</string>
+    <string name="TAG_VIDEO_REWARD_STATUS_FAILED" translatable="false">FAILED</string>
+    <string name="TAG_RANDOM_SHOW_REWARD_DIALOG" translatable="false">RANDOM_SHOW: </string>
 </resources>
