Change log para versiones beta
Signed-off-by: Felipe Gonzalez Alarcon <Felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 33 minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -290,4 +290,6 @@
     <string name="TAG_VIDEO_REWARD_STATUS_CLOSED" translatable="false">CLOSED</string>
     <string name="TAG_VIDEO_REWARD_STATUS_FAILED" translatable="false">FAILED</string>
     <string name="TAG_RANDOM_SHOW_REWARD_DIALOG" translatable="false">RANDOM_SHOW: </string>
+    <string name="change_log_ultima_version">Última versión</string>
+    <string name="change_log_version_prueba">Versión de prueba</string>
 </resources>
