Cambio de url a figonzal.cl y cambio a v1 de API, modificaciones en retry policy
Signed-off-by: Felipe Gonzalez Alarcon <Felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 0 minutes

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -102,4 +102,7 @@
     <string name="TEST_TEXT">Desplazarse hacia arriba</string>
     <string name="TEST_MAS_OPCIONES">Más opciones</string>
     <string name="TEST_TOOLBAR">Título toolbar</string>
+    <string name="change_log_ultima_version">Última versión</string>
+    <string name="change_log_version_prueba">Versión de prueba</string>
+    <string name="INTENT_CHOOSER">Compartir sismos</string>
 </resources>
