--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,20 +24,15 @@
     <string name="tab_reports">Reportes</string>
 
     <!-- URL SERVIDOR HEROKU -->
-    <string name="URL_GET_PROD_QUAKES" translatable="false">https://lastquakechile-server-prod.herokuapp.com/lastquakechile/api/quakes/?limite=%1$s</string>
+    <string name="URL_GET_PROD_QUAKES" translatable="false">https://figonzal.cl/lastquakechile/api/v1/quakes/?limite=%1$s</string>
     <string name="URL_GET_DEV" translatable="false">https://lastquakechile-server-dev.herokuapp.com/lastquakechile/api/quakes/?limite=%1$s</string>
-    <string name="URL_GET_PROD_REPORTS" translatable="false">https://lastquakechile-server-prod.herokuapp.com/lastquakechile/api/reports</string>
+    <string name="URL_GET_PROD_REPORTS" translatable="false">https://figonzal.cl/lastquakechile/api/v1/reports</string>
     <string name="DEEP_LINK" translatable="false">https://lastquakechile.page.link/lqch</string>
 
     <!-- FORMAT -->
     <string name="DATETIME_FORMAT" translatable="false">yyyy-MM-dd HH:mm:ss</string>
 
-    <!-- PACKAGE NAMES -->
-    <string name="PACKAGE_NAME_WSP" translatable="false">com.whatsapp</string>
-    <string name="PACKAGE_NAME_GMAIL" translatable="false">com.google.android.gm</string>
-
     <!-- KEY DE JSON PARA PHP -->
-
     <!-- KEY PARA INTENT & NOTIFICACIONES -->
     <string name="INTENT_TITULO" translatable="false">titulo</string>
     <string name="INTENT_DESCRIPCION" translatable="false">descripcion</string>
