--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -102,4 +102,7 @@
     <string name="TEST_TEXT">Navigate up</string>
     <string name="TEST_MAS_OPCIONES">More options</string>
     <string name="TEST_TOOLBAR">Toolbar title</string>
+    <string name="change_log_ultima_version">Last version</string>
+    <string name="change_log_version_prueba">Test version</string>
+    <string name="INTENT_CHOOSER">Share quakes</string>
 </resources>
