Cambio de limites para el mapa, ahora se puede ver la antartica
Signed-off-by: Felipe Gonzalez Alarcon <Felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 3 minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -207,6 +207,7 @@
     <string name="SHARED_PREF_ACTUAL_VERSION_CODE" translatable="false">actual_version_code</string>
     <string name="SHARED_PREF_END_REWARD_DATE" translatable="false">end_reward_date</string>
     <string name="SHARED_PREF_FIRST_LOAD" translatable="false">is_first_load</string>
+    <string name="SHARED_PREF_EARNED_AD" translatable="false">isEarned</string>
 
 
     <!-- NightMode -->
