--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -83,18 +83,18 @@
     <string name="REWARD_DIALOG_POSITIVE">Ver video</string>
     <string name="REWARD_DIALOG_MESSAGE">Ve el video, apoya gratis monetariamente y recibe 1 día libre de publicidad</string>
     <string name="REWAR_DIALOG_TITLE">¡Apoya a la aplicación!</string>
-    <string name="ENERO">Enero</string>
-    <string name="FEBRERO">Febrero</string>
-    <string name="MARZO">Marzo</string>
-    <string name="ABRIL">April</string>
-    <string name="MAYO">Mayo</string>
-    <string name="JUNIO">Junio</string>
-    <string name="JULIO">Julio</string>
-    <string name="AGOSTO">Agosto</string>
-    <string name="SEPTIEMBRE">Septiembre</string>
-    <string name="OCTUBRE">Octubre</string>
-    <string name="NOVIEMBRE">Noviembre</string>
-    <string name="DICIEMBRE">Diciembre</string>
+    <string name="JAN">Enero</string>
+    <string name="FEB">Febrero</string>
+    <string name="MAR">Marzo</string>
+    <string name="APR">April</string>
+    <string name="MAY">Mayo</string>
+    <string name="JUN">Junio</string>
+    <string name="JUL">Julio</string>
+    <string name="AUG">Agosto</string>
+    <string name="SEP">Septiembre</string>
+    <string name="OCT">Octubre</string>
+    <string name="NOV">Noviembre</string>
+    <string name="DEC">Diciembre</string>
     <string name="FORMATO_REPORTE">Reporte %s %s</string>
     <string name="change_logs">Historial de versiones</string>
     <string name="boton_flotante_twitter">Botón flotante twitter</string>
