--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -45,10 +45,7 @@
     <string name="settings">Settings</string>
     <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_OFF">Alerts disabled</string>
     <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_ON">Alerts enabled</string>
-    <string name="NIGHT_MODE_AUTO_KEY_TOAST_OFF">Automatic disabled</string>
-    <string name="NIGHT_MODE_AUTO_KEY_TOAST_ON">Automatic enabled</string>
-    <string name="NIGHT_MODE_MANUAL_KEY_TOAST_OFF">Manual disabled</string>
-    <string name="NIGHT_MODE_MANUAL_KEY_TOAST_ON">Manual enabled</string>
+    <string name="NIGHT_MODE_KEY_TOAST_ON">Night mode on</string>
     <string name="alert_pref_summary_off">Disabled</string>
     <string name="alert_pref_title">Notifications</string>
     <string name="alert_pref_title_switch">Quake alerts</string>
@@ -59,7 +56,7 @@
     <string name="night_mode_auto_pref_title_switch">Automatic with power save</string>
     <string name="night_mode_manual_pref_summary_off">Disabled</string>
     <string name="night_mode_manual_pref_summary_on">Enabled</string>
-    <string name="night_mode_manual_pref_title_switch">Force night mode</string>
+    <string name="night_mode_pref_title_switch">Night mode</string>
     <string name="night_mode_pref_summary">Save battery and avoid your eyestrain</string>
     <string name="night_mode_pref_title">Night mode</string>
     <string name="tab_map">Map</string>
@@ -104,4 +101,5 @@
     <string name="change_log_ultima_version">Last version</string>
     <string name="change_log_version_prueba">Test version</string>
     <string name="INTENT_CHOOSER">Share quakes</string>
+    <string name="NIGHT_MODE_KEY_TOAST_OFF">Night mode off</string>
 </resources>
