--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -106,4 +106,5 @@
     <string name="solucionamos_el_problema">Solved things</string>
     <string name="entendido">Ok</string>
     <string name="qu_hay_de_nuevo_en_la_app">" What's new in the app?"</string>
+    <string name="map_type">Map type</string>
 </resources>
