--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,18 +19,9 @@
     <string name="FIREBASE_CHANNEL_DESCRIPTION_QUAKES">Receives quake alerts above 5 degrees</string>
     <string name="last_quakes_info_card_view_tittle">Last quakes</string>
     <string name="last_quakes_info_card_view_button">OK</string>
-    <string name="VIEWMODEL_TIMEOUT_ERROR">Server does not respond, try later</string>
-    <string name="VIEWMODEL_NOCONNECTION_ERROR">You don\'t have an Internet connection</string>
-    <string name="VIEWMODEL_SERVER_ERROR">Oops an error has occurred! Try again later</string>
-    <string name="icono_app">App icon</string>
-    <string name="invitation_welcome">¡Welcome!</string>
-    <string name="icono_ondas">Waves icon</string>
     <string name="coordenadas_oeste">W</string>
     <string name="coordenadas_este">E</string>
     <string name="seccion_listado_de_sismos">List of quakes section</string>
-    <string name="titulo_toolbar">Toolbar title</string>
-    <string name="boton_flotante_gmail">Floating button Gmail</string>
-    <string name="boton_flotante_whatsapp">Floating button Whatsapp</string>
     <string name="boton_compartir_sismo">Button to share quake</string>
     <string name="imagen_estado_sismo">Quake status image</string>
     <string name="quakes_details_estado_sismo">Quake %s</string>
@@ -51,9 +42,6 @@
     <string name="alert_pref_title_switch">Quake alerts</string>
     <string name="alert_pref_summary_on">Enabled</string>
     <string name="alert_pref_summary">Receive quakes notifications of +5.0 degrees</string>
-    <string name="night_mode_auto_pref_summary_off">Disabled</string>
-    <string name="night_mode_auto_pref_summary_on">Enabled</string>
-    <string name="night_mode_auto_pref_title_switch">Automatic with power save</string>
     <string name="night_mode_manual_pref_summary_off">Disabled</string>
     <string name="night_mode_manual_pref_summary_on">Enabled</string>
     <string name="night_mode_pref_title_switch">Night mode</string>
@@ -61,13 +49,14 @@
     <string name="night_mode_pref_title">Night mode</string>
     <string name="tab_map">Map</string>
     <string name="tab_list">Quakes</string>
-    <string name="LIST_QUAKE_NUMBER_SUMMARY">Last %1$d quakes</string>
+    <plurals name="LIST_QUAKE_NUMBER_SUMMARY">
+        <item quantity="one">Last %1$d quake</item>
+        <item quantity="other">Last %1$d quakes</item>
+    </plurals>
     <string name="quake_list_number_pref_title">Quake data</string>
     <string name="quake_list_number_pref_summary">Number of quakes you want to see</string>
     <string name="last_quakes_info_card_view_description">This list shows the last 15 earthquakes that occurred in Chile, you can modify the amount in the section &#8942; -> Settings</string>
     <string name="tab_reports">Reports</string>
-    <string name="no_hay_reportes_registrados">There are no registered reports</string>
-    <string name="no_hay_sismos_registrados">No quakes registered</string>
     <string name="icono_reporte_mensual">Monthly report icon</string>
     <string name="n_sismos_reportados">N° reported quakes</string>
     <string name="n_sismos_sensibles">N° sensitive quakes</string>
@@ -76,10 +65,6 @@
     <string name="m_xima_magnitud">Maximum magnitude</string>
     <string name="m_nima_profundidad">Minimum depth</string>
     <string name="top_ciudades_con_m_s_sismos">Top cities with the most earthquakes</string>
-    <string name="REWARD_DIALOG_NEGATIVE">Cancel</string>
-    <string name="REWARD_DIALOG_POSITIVE">Watch video</string>
-    <string name="REWAR_DIALOG_TITLE">Support the app!</string>
-    <string name="REWARD_DIALOG_MESSAGE">Watch the video, support free monetarily and receive 1 day free of advertising</string>
     <string name="FORMATO_REPORTE">Report %s %s</string>
     <string name="JAN">January</string>
     <string name="FEB">February</string>
@@ -94,17 +79,16 @@
     <string name="NOV">November</string>
     <string name="DEC">December</string>
     <string name="change_logs">Version history</string>
-    <string name="boton_flotante_twitter">Floating button Twitter</string>
     <string name="TEST_TEXT">Navigate up</string>
     <string name="TEST_MAS_OPCIONES">More options</string>
     <string name="TEST_TOOLBAR">Toolbar title</string>
-    <string name="change_log_ultima_version">Last version</string>
-    <string name="change_log_version_prueba">Test version</string>
     <string name="INTENT_CHOOSER">Share quakes</string>
     <string name="NIGHT_MODE_KEY_TOAST_OFF">Night mode off</string>
     <string name="version">"Version "</string>
     <string name="solucionamos_el_problema">Solved things</string>
-    <string name="entendido">Ok</string>
+    <string name="entendido">OK</string>
     <string name="qu_hay_de_nuevo_en_la_app">" What's new in the app?"</string>
     <string name="map_type">Map type</string>
+    <string name="new_version_icon">New Version Icon</string>
+    <string name="estilo_mapa">Map style</string>
 </resources>
