--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name" translatable="false">LastQuakeChile</string>
 
+    <string name="BASE_URL" translatable="false">https://lastquakechile-server-prod.herokuapp.com</string>
+
     <string name="ADMOB_MASTER_KEY" translatable="false">ca-app-pub-6355378855577476~7414287525</string>
     <!-- PROD AD-->
     <!--<string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-6355378855577476/9207230747</string>
     <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-6355378855577476/7649578822</string>-->
     <!--TEST AD-->
     <string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
-    <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
 
     <!-- TOOLBAR Menu STRINGS -->
     <string name="refresh">Recargar</string>
@@ -21,13 +22,7 @@
     <string name="tab_reports">Reportes</string>
 
     <!-- URL SERVIDOR HEROKU -->
-    <string name="URL_GET_PROD_QUAKES" translatable="false">https://lastquakechile-server-prod.herokuapp.com/lastquakechile/api/v1/quakes/?limite=%1$s</string>
-    <string name="URL_GET_DEV" translatable="false">https://lastquakechile-server-dev.herokuapp.com/lastquakechile/api/v1/quakes/?limite=%1$s</string>
-    <string name="URL_GET_PROD_REPORTS" translatable="false">https://lastquakechile-server-prod.herokuapp.com/lastquakechile/api/v1/reports</string>
     <string name="DEEP_LINK" translatable="false">https://lastquakechile.page.link/lqch</string>
-
-    <!-- FORMAT -->
-    <string name="DATETIME_FORMAT" translatable="false">yyyy-MM-dd HH:mm:ss</string>
 
     <!-- KEY DE JSON PARA PHP -->
     <!-- KEY PARA INTENT & NOTIFICACIONES -->
@@ -38,7 +33,6 @@
     <string name="INTENT_REFERENCIA" translatable="false">referencia</string>
     <string name="INTENT_LATITUD" translatable="false">latitud</string>
     <string name="INTENT_LONGITUD" translatable="false">longitud</string>
-    <string name="INTENT_FECHA_LOCAL" translatable="false">fecha_local</string>
     <string name="INTENT_FECHA_UTC" translatable="false">fecha_utc</string>
     <string name="INTENT_MAGNITUD" translatable="false">magnitud</string>
     <string name="INTENT_PROFUNDIDAD" translatable="false">profundidad</string>
@@ -75,25 +69,15 @@
     <string name="quake_details_magnitud_local">Magnitud Local (Ml)</string>
     <string name="quake_details_magnitud_momento" tools:ignore="Typos">Magnitud Momento (Mw)</string>
     <string name="icono_sensible">Icono sensible</string>
-    <string name="icono_app">Icono app</string>
-    <string name="invitation_welcome">¡Bienvenido!</string>
-    <string name="icono_ondas">Icono ondas</string>
     <string name="coordenadas_sur" translatable="false">S</string>
     <string name="coordenadas_norte" translatable="false">N</string>
     <string name="coordenadas_oeste">O</string>
     <string name="coordenadas_este">E</string>
     <string name="format_coordenadas" translatable="false">%s \n%s</string>
     <string name="seccion_listado_de_sismos">Sección listado de sismos</string>
-    <string name="titulo_toolbar">Título toolbar</string>
     <string name="last_quakes_info_card_view_tittle">Últimos sismos</string>
     <string name="last_quakes_info_card_view_button">Entendido</string>
     <string name="last_quakes_info_card_view_description">En este listado se muestran los últimos 15 sismos ocurridos en Chile, puedes modificar la cantidad en la sección &#8942; -> Configuración</string>
-    <string name="fab_gmail" translatable="false">Gmail</string>
-    <string name="fab_twitter" translatable="false">Twitter</string>
-    <string name="fab_whatsapp" translatable="false">Whatsapp</string>
-    <string name="boton_flotante_gmail">Botón flotante gmail</string>
-    <string name="boton_flotante_twitter">Botón flotante twitter</string>
-    <string name="boton_flotante_whatsapp">Botón flotante whatsapp</string>
     <string name="boton_compartir_sismo">Botón compartir sismo</string>
     <string name="imagen_estado_sismo">Imagen estado sismo</string>
     <string name="quakes_details_estado_sismo">Sismo %s</string>
@@ -101,8 +85,6 @@
     <string name="quakes_details_estado_sismo_verificado">verificado</string>
     <string name="quake_list_number_pref_summary">Número de sismos que quieres ver en lista</string>
     <string name="quake_list_number_pref_title">Datos sismos</string>
-    <string name="no_hay_sismos_registrados">No hay sismos registrados</string>
-    <string name="no_hay_reportes_registrados">No hay reportes registrados</string>
     <string name="icono_reporte_mensual">Icono reporte mensual</string>
     <string name="n_sismos_reportados">N° sismos reportados</string>
     <string name="n_sismos_sensibles">N° sismos sensibles</string>
@@ -111,7 +93,6 @@
     <string name="m_xima_magnitud">Máxima magnitud</string>
     <string name="m_nima_profundidad">Mínima profundidad</string>
     <string name="top_ciudades_con_m_s_sismos">Top ciudades con más sismos</string>
-    <string name="NOTIFICATION_CHANGE_LOG_TITLE" translatable="false">¡Novedades! v</string>
     <string name="alert_pref_summary">Recibe notificaciones de sismos de +5.0 grados</string>
     <string name="alert_pref_title">Notificaciones</string>
     <string name="alert_pref_title_switch">Alertas de sismos</string>
@@ -126,20 +107,14 @@
     <string name="TAG_FRAGMENT_QUAKE" translatable="false">FRAGMENT_QUAKE</string>
     <string name="TAG_FRAGMENT_REPORTS" translatable="false">D/FRAGMENT_REPORTS: </string>
     <string name="FRAGMENT_LOAD_LIST" translatable="false">Listado cargado</string>
-    <string name="CONNECTION_OK_RESPONSE" translatable="false">Conexion correcta</string>
     <string name="TAG_CARD_VIEW_INFO" translatable="false">CARD_VIEW_INFO</string>
     <string name="TAG_FAB_SHARE_STATUS" translatable="false">FAB SHARE</string>
     <string name="TAG_FAB_SHARE_STATUS_CLICKED" translatable="false">CLICKED</string>
     <string name="TAG_FRAGMENT_SETTINGS_QUAKE_LIST_LIMIT" translatable="false">Numero de sismos fijados: %1$d</string>
-    <string name="LIST_QUAKE_NUMBER_SUMMARY" tools:ignore="PluralsCandidate">Últimos %1$d sismos</string>
-    <string name="TAG_SHARED_VERSION_CODE_APP" translatable="false">SHARED_VERSION_CODE_APP</string>
-    <string name="TAG_VERSION_CODE_APP" translatable="false">VERSION_CODE_APP</string>
-    <string name="TAG_VOLLEY_ERROR_TIMEOUT" translatable="false">Timeout error</string>
-    <string name="TAG_VOLLEY_ERROR_SERVER" translatable="false">Server error</string>
-    <string name="TAG_VOLLEY_ERROR_NETWORK" translatable="false">Network error</string>
-    <string name="TAG_CONNECTION_SERVER_RESPALDO_RESPONSE" translatable="false">INTENTO DE CONEXION A RESPALDO (DEVELOPMENT)</string>
-    <string name="TAG_CONNECTION_SERVER_OFICIAL_RESPONSE" translatable="false">INTENTO DE CONEXION A OFICIAL (PRODUCTION)</string>
-    <string name="TAG_INTENT" translatable="false">INTENT</string>
+    <plurals name="LIST_QUAKE_NUMBER_SUMMARY">
+        <item quantity="one">Último %1$d sismo</item>
+        <item quantity="other">Últimos %1$d sismos</item>
+    </plurals>
     <string name="TAG_INTENT_GOOGLEPLAY" translatable="false">Abriendo google play app</string>
     <string name="TAG_INTENT_NAVEGADOR" translatable="false">Abriendo navegador</string>
     <string name="TRY_INTENT_NOTIFICATION_1" translatable="false">Realizando intent de notificacion</string>
@@ -151,15 +126,11 @@
     <string name="GOOGLE_PLAY_ACTUALIZADO" translatable="false">Google Play - actualizado</string>
     <string name="TAG_INFO_WINDOWS_RESPONSE" translatable="false">INFO WINDOWS OPEN</string>
     <string name="TAG_MAP_READY_RESPONSE" translatable="false">MAP READY</string>
-    <string name="TAG_INTENT_INFO_WINDOWS" translatable="false">Intent de infowindows a detalle de sismo</string>
 
     <!-- FIREBASE strings -->
     <string name="FIREBASE_CHANNEL_ID_QUAKES" translatable="false">1</string>
     <string name="FIREBASE_CHANNEL_NAME_QUAKES">Alerta sismos</string>
     <string name="FIREBASE_CHANNEL_DESCRIPTION_QUAKES">Recibe alertas de sismos sobre 5 grados</string>
-    <string name="FIREBASE_CHANNEL_ID_CHANGELOG" translatable="false">2</string>
-    <string name="FIREBASE_CHANNEL_NAME_CHANGELOG" translatable="false">Nuevas versiones</string>
-    <string name="FIREBASE_CHANNEL_DESCRIPTION_CHANGELOG" translatable="false">Recibe alertas sobre las nuevas versiones de la app</string>
     <string name="FIREBASE_CHANNEL_STATUS" translatable="false">CANAL_CREADO</string>
     <string name="FIREBASE_MESSAGE_DATA_STATUS" translatable="false">MESSAGE_DATA_RECEIVED</string>
     <string name="FIREBASE_MESSAGE_NOTIFICATION_STATUS" translatable="false">MESSAGE_NOTIFICATION_RECEIVED</string>
@@ -179,33 +150,18 @@
     <string name="UTILS_TIEMPO_MINUTOS" translatable="false">minutos</string>
     <string name="UTILS_TIEMPO_SEGUNDOS" translatable="false">segundos</string>
 
-    <!-- VIEWMODEL ERROR MESSAGES -->
-    <string name="VIEWMODEL_TIMEOUT_ERROR">Servidor no responde, intente más tarde</string>
-    <string name="VIEWMODEL_NOCONNECTION_ERROR">No tienes conexión a Internet</string>
-    <string name="VIEWMODEL_SERVER_ERROR">¡Ups ha ocurrido un error! Intente mas tarde</string>
-
-    <!-- INVITATION STRINGS -->
-    <string name="INVITATION_STATUS" translatable="false">Invitacion sin datos</string>
-    <string name="TAG_DEEP_LINK_DATA" translatable="false">DEEP_LINK</string>
-
     <!-- SHARE PREFERENCES KEYS (Variables) -->
     <string name="SHARED_PREF_MASTER_KEY" translatable="false">lastquakechile</string>
     <string name="SHARED_PREF_STATUS_CARD_VIEW_INFO" translatable="false">is_show_card_view_info</string>
     <string name="SHARED_PREF_STATUS_CARD_VIEW_INFO_RESULT" translatable="false">entendido</string>
     <string name="SHARED_PREF_LIST_QUAKE_NUMBER" translatable="false">pref_list_quake_number</string>
     <string name="SHARED_PREF_ACTUAL_VERSION_CODE" translatable="false">actual_version_code</string>
-    <string name="SHARED_PREF_END_REWARD_DATE" translatable="false">end_reward_date</string>
-    <string name="SHARED_PREF_FIRST_LOAD" translatable="false">is_first_load</string>
-    <string name="SHARED_PREF_EARNED_AD" translatable="false">isEarned</string>
     <string name="SHARED_VERSION_CODE_APP" translatable="false">STORE VERSION CODE: </string>
     <string name="VERSION_CODE_APP" translatable="false">INSTALLED VERSION CODE: </string>
 
 
     <!-- NightMode -->
     <string name="NIGHT_MODE_KEY" translatable="false">pref_night_mode</string>
-    <string name="TAG_NIGHT_MODE_STATUS_ON" translatable="false">ON</string>
-    <string name="TAG_NIGHT_MODE_STATUS_OFF" translatable="false">OFF</string>
-    <string name="TAG_NIGHT_MODE_AUTO" translatable="false">NIGHT MODE AUTO</string>
     <string name="TAG_NIGHT_MODE" translatable="false">NIGHT MODE</string>
     <string name="NIGHT_MODE_KEY_TOAST_ON">Modo noche activado</string>
     <string name="NIGHT_MODE_KEY_TOAST_OFF">Modo noche desactivado</string>
@@ -214,35 +170,12 @@
     <string name="night_mode_pref_title_switch">Modo noche</string>
     <string name="night_mode_manual_pref_summary_on">Activado</string>
     <string name="night_mode_manual_pref_summary_off">Desactivado</string>
-    <string name="night_mode_auto_pref_title_switch">Automático con ahorro de energía</string>
-    <string name="night_mode_auto_pref_summary_on">Activado</string>
-    <string name="night_mode_auto_pref_summary_off">Desactivado</string>
 
 
     <!-- REWARD DIALOG TAGS -->
-    <string name="REWARD_DIALOG" translatable="false">RewardDialog</string>
-    <string name="TAG_REWARD_DIALOG_BTN_VER_VIDEO" translatable="false">BOTON VER VIDEO PRESIONADO</string>
-    <string name="TAG_REWARD_DIALOG_BTN_CANCEL" translatable="false">BOTON CANCEL PRESIONADO</string>
-    <string name="TAG_VIDEO_REWARD_STATUS" translatable="false">D/VIDEO_REWARD_STATUS: </string>
-    <string name="TAG_VIDEO_REWARD_STATUS_LOADED" translatable="false">LOADED</string>
-    <string name="TAG_VIDEO_REWARD_STATUS_REWARDED" translatable="false">REWARDED</string>
-    <string name="TAG_REWARD_STATUS_EN_PERIODO" translatable="false">EN PERIODO REWARD</string>
-    <string name="TAG_REWARD_STATUS_PERIODO_INACTIVO" translatable="false">PERIODO REWARD INACTIVO</string>
-    <string name="TAG_RANDOM_SHOW_REWARD_DIALOG_ON" translatable="false">MOSTRAR DIALOG REWARD</string>
-    <string name="TAG_RANDOM_SHOW_REWARD_DIALOG_OFF" translatable="false">NO MOSTRAR DIALOG REWARD</string>
-    <string name="TAG_FRAGMENT_REWARD_DATE" translatable="false">FRAGMENT_REWARD_DATE</string>
-    <string name="TAG_ADS_LOADED" translatable="false">ADS CARGADOS</string>
-    <string name="TAG_ADS_NOT_LOADED" translatable="false">ADS NO PERMITIDOS</string>
     <string name="TAG_ADMOB_AD_STATUS_FAILED" translatable="false">FAILED TO LOAD</string>
     <string name="TAG_ADMOB_AD_STATUS_LOADED" translatable="false">ADD LOADED</string>
     <string name="TAG_ADMOB_AD_STATUS_OPEN" translatable="false">ADD OPEN</string>
-    <string name="TAG_NOTIFICATION_CHANGELOG_STATUS_RESPONSE_SENDED" translatable="false">ENVIADA</string>
-    <string name="TAG_NOTIFICATION_CHANGELOG_STATUS_RESPONSE_SHOWED" translatable="false">MOSTRADA</string>
-    <string name="TAG_NOTIFICATION_CHANGELOG_STATUS_RESPONSE_EMPTY" translatable="false">VACIA -  NO MOSTRADA</string>
-    <string name="REWAR_DIALOG_TITLE">¡Apoya a la aplicación!</string>
-    <string name="REWARD_DIALOG_MESSAGE">Ve el video, apoya gratis monetariamente y recibe 1 día libre de publicidad</string>
-    <string name="REWARD_DIALOG_POSITIVE">Ver video</string>
-    <string name="REWARD_DIALOG_NEGATIVE">Cancelar</string>
 
     <!-- Reportes -->
     <string name="JAN">Enero</string>
@@ -267,14 +200,6 @@
     <string name="TEST_MAS_OPCIONES">Más opciones</string>
     <string name="TEST_TOOLBAR">Título toolbar</string>
 
-    <string name="TAG_HORA_AHORA" translatable="false">HORA_AHORA:</string>
-    <string name="TAG_HORA_REWARD" translatable="false">"HORA_REWARD: "</string>
-    <string name="TAG_REWARD_STATUS" translatable="false">REWARD_STATUS: </string>
-    <string name="TAG_VIDEO_REWARD_STATUS_CLOSED" translatable="false">CLOSED</string>
-    <string name="TAG_VIDEO_REWARD_STATUS_FAILED" translatable="false">FAILED</string>
-    <string name="TAG_RANDOM_SHOW_REWARD_DIALOG" translatable="false">RANDOM_SHOW: </string>
-    <string name="change_log_ultima_version">Última versión</string>
-    <string name="change_log_version_prueba">Versión de prueba</string>
     <string name="INTENT_CHOOSER">Compartir sismos</string>
     <string name="version">Versión </string>
     <string name="qu_hay_de_nuevo_en_la_app">¿Qué hay de nuevo en la app?</string>
@@ -283,5 +208,8 @@
     <string name="NEW_VERSION_DETECTED" translatable="false">NUEVA VERSION DETECTADA</string>
     <string name="NO_NEW_VERSION_DETECTED" translatable="false">NUEVA VERSION NO DETECTADA</string>
     <string name="map_type">Tipo de mapa</string>
+    <string name="new_version_icon">Icono nueva version</string>
+    <string name="estilo_mapa">Estilo Mapa</string>
+
 
 </resources>
