AdView en fragment
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 5 hours 16 minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-6355378855577476/7649578822</string>-->
     <!--TEST AD-->
     <string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="ADMOB_ID_NATIVE" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
 
     <!-- TOOLBAR Menu STRINGS -->
     <string name="refresh">Recargar</string>
