Se agrega limite a consulta de API
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 19 minutes

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -50,8 +50,8 @@
     <string name="tab_map">Map</string>
     <string name="tab_list">Quakes</string>
     <plurals name="LIST_QUAKE_NUMBER_SUMMARY">
-        <item quantity="one">Last %1$d quake</item>
-        <item quantity="other">Last %1$d quakes</item>
+        <item quantity="one">Last %d quake</item>
+        <item quantity="other">Last %d quakes</item>
     </plurals>
     <string name="quake_list_number_pref_title">Quake data</string>
     <string name="quake_list_number_pref_summary">Number of quakes you want to see</string>
